# ezytutors

./: Cargo.toml
tutor-db/: .env  Cargo.toml
tutor-db/src/: database.sql
tutor-db/src/iter3/: db_access.rs  models.rs
tutor-db/src/iter4/: errors.rs
tutor-db/src/iter5/: routes.rs
tutor-db/src/iter5/dbaccess/: course.rs
tutor-db/src/iter5/dbscripts/: course.sql
tutor-db/src/iter5/handlers/: course.rs
tutor-db/src/iter5/models/: course.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
tutor-web-app-ssr/: .env  Cargo.toml
tutor-web-app-ssr/src/iter5/: dbaccess.rs  errors.rs  handler.rs  mod.rs  model.rs  routes.rs  state.rs
tutor-web-app-ssr/src/iter6/: dbaccess.rs  errors.rs  model.rs  routes.rs
tutor-web-app-ssr/src/iter6/handler/: auth.rs
tutor-web-app-ssr/static/: static-web-page.html  tutor-style.css
tutor-web-app-ssr/static/iter1/: index.html
tutor-web-app-ssr/static/iter2/: form.html  user.html
tutor-web-app-ssr/static/iter3/: list.html
tutor-web-app-ssr/static/iter4/: list.html
tutor-web-app-ssr/static/iter6/: register.html  signin.html  user.html
tutor-web-service/src/iter2/: handlers.rs
tutor-web-service/src/iter3/: handlers.rs  routes.rs
tutor-web-service/src/iter4/: db_access.rs  errors.rs  handlers.rs
tutor-web-service/src/iter5/: errors.rs  routes.rs
tutor-web-service/src/iter5/dbaccess/: tutor.rs
tutor-web-service/src/iter5/dbscripts/: course.sql
tutor-web-service/src/iter5/handlers/: tutor.rs
tutor-web-service/src/iter5/models/: course.rs
