[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
tera = "1.17.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
dotenv = "0.15.0"
awc = {version = "3.0.1", features = ["openssl"]}
sqlx = {version = "0.6.2", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"]}
rust-argon2 = "1.0.0"
openssl = {version = "0.10.41", features = ["vendored"]}

[dev-dependencies]
actix-rt = "2.7.0"